--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,7 @@ dependencies = [
     "marimo>=0.9",
     "matplotlib>=3.9.2",
     "numpy>=2.1.1",
+    "pandas>=2.2.3",
     "scipy>=1.14.1",
+    "seaborn>=0.13.2",
 ]
